fixed spacing for top

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0px 200px;
 }
 
 .logo {
@@ -37,6 +38,7 @@ a, .secondary {
 
 .top-content {
     display: flex;
+    padding: 100px 200px;
 }
 
 .top-left {
